:rocket: deploy: Adição da variável de ambiente para inserir a URL do frontend.